[gd_scene load_steps=4 format=3 uid="uid://dtnoerkprbkj0"]

[ext_resource type="Texture2D" uid="uid://bcmri024214xy" path="res://Resources/UI/Goal_Slot.png" id="2_a532j"]
[ext_resource type="Script" path="res://UI/Goals/GoalSlot.gd" id="2_njacj"]
[ext_resource type="PackedScene" uid="uid://bvd0t6ahgdtt5" path="res://UI/Common/ItemDisplay.tscn" id="3_ujyb0"]

[node name="GoalSlot" type="MarginContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -272.0
offset_bottom = -308.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_njacj")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 2

[node name="BackgroundTexture" type="TextureRect" parent="AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_a532j")
stretch_mode = 4

[node name="TargetDisplay" parent="AspectRatioContainer" instance=ExtResource("3_ujyb0")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 2

[node name="ItemDisplay" parent="AspectRatioContainer" instance=ExtResource("3_ujyb0")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="CompleteLabel" type="Label" parent="AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "0/0
"
horizontal_alignment = 1
vertical_alignment = 1
